tests/NormalTests/paczka1/fuzzy1/29799613.err
Error in line 1: zghNmOFWH2p S579 3,7
Error in line 4: p1POQne2Eh S579 68,5
Error in line 13: JrQW8IrDwPk A844 -1,0
Error in line 12: mvpSMCBY S579 92,0
Error in line 10: p1POQne2Eh A644 81,6
Error in line 16: zghNmOFWH2p S579 32,9
Error in line 22: XkYNQp8 S579 67,7
Error in line 11: JrQW8IrDwPk A844 95,8
